compiler/testdata/invalid/missing_function_body.pr
// Function without body (not a method, so block is required).
main()
